Fixed perspective issue by specifying the perspective in the node's transform css instead of on #swd_wrap

--- a/sevenwondersduel.css
+++ b/sevenwondersduel.css
@@ -110,7 +110,7 @@ __     __         _       _     _
  */
 
 #swd_wrap {
-    perspective: 40em; /* https://css-tricks.com/things-watch-working-css-3d/ */
+
 }
 
 #swd_wrap h3 {
